	(minwrt): Add 4.0.2 release.
	(w32api): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

	Publish contrib package tcl/tk 8.6.0.

	* mingw32/mingw32-package-list.xml: Add mingw32-tcktk.xml package.
	Add package group MinGW Contributed.
	* contrib/mingw32-tcltk.xml: New package.
	* common/issue.log mingw32/issue.log contrib/issue.log: Update
	accordingly.

2013-09-14  Earnie Boyd  <earnie@users.sourceforge.net>

	Publish a correction for libwinspool.a.

	* mingw32/mingw32-runtime.xml:
	(mingwrt): Add 4.0.1 release.
	(w32api): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingw-get release 0.6.1-beta-20130910-1.

	* mingw32/mingw32-mingw-get.xml:
	(mingw-get) <bin>: Add 0.6.1-beta-20130910-1 release specification;
	(mingw-get) <gui, lic>: Likewise.
	(pkginfo) <bin>: Likewise.

	* mingw32-mingw-get.xml.lzma: Regenerated and published.
	* mingw32-package-list.lzma package-list.xml.lzma: Likewise.

	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-10  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-expat.xml: Correct the usage of libexpat.
	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-09  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-gettext.xml: Use the correct package name for libgcc.
	* mingw32/mingw32-libiconv.xml: Ditto.
	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-08  Earnie Boyd  <earnie@users.sourceforge.net>

	Finish rework for gcc and publish 4.8.1-2.

	* mingw32/mingw32-gcc4.xml: Add 4.8.1-2 release and complete the rework
	for the libraries.
	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-07  Earnie Boyd  <earnie@users.sourceforge.net>

	Rework my previous changes to help avoid ERROR issues.

	* mingw32/mingw32-binutils.xml: Change dependency to match changes in
	mingw32-gcc4.xml and mingw32-zlib.xml.