@@ -13,11 +13,11 @@
       <package-group name="MinGW Libraries">
         <package-group name="MinGW Standard Libraries" />
         <package-group name="MinGW Supplementary Libraries" />
-	<package-group name="MinGW Contributed Libraries" />
+        <package-group name="MinGW Contributed Libraries" />
       </package-group>
       <package-group name="MinGW Contributed">
-	<package-group name="MinGW Contributed Applications" />
-	<package-group name="MinGW Contributed Libraries" />
+        <package-group name="MinGW Contributed Applications" />
+        <package-group name="MinGW Contributed Libraries" />
       </package-group>
       <package-group name="MinGW Autotools" />
     </package-group>
